# TCG-2021fall-NYCU-HW2

./: .gitignore  .nfs0000000051c9637f00000006  .nfs0000000051c9638200000005  2584.cpp  CMakeLists.txt  README.md  action.h  agent.h  board.h  episode.h  log.txt  makefile  nnToScript.py  statistic.h  train.sh  weight.h
